tests/ui/layout/normalization-failure.stderr
error: unable to determine layout for `<impl Project2 as Project2>::Assoc2` because `<impl Project2 as Project2>::Assoc2` cannot be normalized
  --> $DIR/normalization-failure.rs:50:9
   |
LL |         std::mem::transmute::<_, ()>(opaque::<T>().get());
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

